--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing-Page</title>
+    <link rel="stylesheet" href="/home/cooperkadish/Desktop/landing-page/landing-page/css/styles.css">
 </head>
 <body>
     <div class="header">
@@ -17,7 +18,13 @@
         </div>
     </div>
     <div class="content">
-        
+        <div class="group-1">
+            <h3 class="left">This Website is Awesome</h3>
+            <div class="left">This website has some subtext that goes here under the main title. 
+            It's a smaller font and the color is lower contrast.</div>
+            <button class="left">Sign Up</button>
+            <img src="#" alt="This is a placeholder for an image.">
+        </div>
     </div>
 </body>
 </html>
