--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
     </div>
     <div class="content">
         <div class="group-1">
-            <h3 class="left">This Website is Awesome</h3>
-            <div class="left">This website has some subtext that goes here under the main title. 
-            It's a smaller font and the color is lower contrast.</div>
-            <button class="left">Sign Up</button>
-            <img src="#" alt="This is a placeholder for an image.">
+            <div class="left">
+                <h3 class="left">This Website is Awesome</h3>
+                <div class="left">This website has some subtext that goes here under the main title. 
+                It's a smaller font and the color is lower contrast.</div>
+                <button class="left">Sign Up</button>
+            </div>
+                <img src="#" alt="This is a placeholder for an image.">
         </div>
     </div>
 </body>
