--- a/index.html
+++ b/index.html
@@ -21,12 +21,35 @@
         <div class="group-1">
             <div class="left">
                 <h3 class="left">This Website is Awesome</h3>
-                <div class="left">This website has some subtext that goes here under the main title. 
+                <div class="left text">This website has some subtext that goes here under the main title. 
                 It's a smaller font and the color is lower contrast.</div>
                 <button class="left">Sign Up</button>
             </div>
                 <img src="#" alt="This is a placeholder for an image.">
         </div>
+        <div class="group-2">
+            <h5>Some Random Information</h5>
+            <ul>
+                <li><img src="#">This is some subtext under an illustration or image.</li>
+                <li><img src="#">This is some subtext under an illustration or image.</li>
+                <li><img src="#">This is some subtext under an illustration or image.</li>
+                <li><img src="#">This is some subtext under an illustration or image.</li>
+            </ul>
+        </div>
+        <div class="group-3">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's
+            just filling up space, or maybe people will actually read it. Who knows? All I 
+            know is that it looks nice.</div>
+            <div class="signature">- Thor, God of Thunder</div>
+        </div>
+        <div class="group-4">
+            <h5>Call to Action! It's Time!</h5>
+            <div>Sign up for our product by clicking that button right over there!</div>
+            <button>Sign Up</button>
+        </div>
+    </div>
+    <div class="footer">
+        <div>Copyright © The Odin Project 2021</div>
     </div>
 </body>
 </html>
