--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="header">
-        <h5 class="logo">Header Logo</h5>
-        <div class="links">
+        <h5>Header Logo</h5>
+        <div>
             <ul>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
@@ -21,7 +21,7 @@
         <div class="group-1">
             <div class="left">
                 <h3 class="left">This Website is Awesome</h3>
-                <div class="left text">This website has some subtext that goes here under the main title. 
+                <div class="left">This website has some subtext that goes here under the main title. 
                 It's a smaller font and the color is lower contrast.</div>
                 <button class="left">Sign Up</button>
             </div>
@@ -43,13 +43,13 @@
             <div class="signature">- Thor, God of Thunder</div>
         </div>
         <div class="group-4">
-            <h5>Call to Action! It's Time!</h5>
-            <div>Sign up for our product by clicking that button right over there!</div>
+            <h5 class="left">Call to Action! It's Time!</h5>
+            <div class="text left">Sign up for our product by clicking that button right over there!</div>
             <button>Sign Up</button>
         </div>
     </div>
     <div class="footer">
-        <div>Copyright © The Odin Project 2021</div>
+        <div class="text">Copyright © The Odin Project 2021</div>
     </div>
 </body>
 </html>
