fully develop css for header and first block of content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 It's a smaller font and the color is lower contrast.</div>
                 <button class="left">Sign Up</button>
             </div>
-                <img src="#" alt="This is a placeholder for an image.">
+                <img src="#" alt="This is a placeholder for an image." class="img-1">
         </div>
         <div class="group-2">
             <h5>Some Random Information</h5>
