designing css part of some random information

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                 <img src="#" alt="This is a placeholder for an image." class="img-1">
         </div>
         <div class="group-2">
-            <h5>Some Random Information</h5>
-            <ul>
-                <li><img src="#">This is some subtext under an illustration or image.</li>
-                <li><img src="#">This is some subtext under an illustration or image.</li>
-                <li><img src="#">This is some subtext under an illustration or image.</li>
-                <li><img src="#">This is some subtext under an illustration or image.</li>
+            <h4>Some Random Information</h4>
+            <ul class="something">
+                <li class="mid-list"><img class="is" src="#">This is some subtext under an illustration or image.</li>
+                <li class="mid-list"><img class="is" src="#">This is some subtext under an illustration or image.</li>
+                <li class="mid-list"><img class="is" src="#">This is some subtext under an illustration or image.</li>
+                <li class="mid-list"><img class="is" src="#">This is some subtext under an illustration or image.</li>
             </ul>
         </div>
         <div class="group-3">
