--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h3 class="left">This Website is Awesome</h3>
                 <div class="left">This website has some subtext that goes here under the main title. 
                 It's a smaller font and the color is lower contrast.</div>
-                <button class="left">Sign Up</button>
+                <button class="button-1">Sign Up</button>
             </div>
                 <img src="#" alt="This is a placeholder for an image." class="img-1">
         </div>
@@ -43,9 +43,10 @@
             <div class="signature">- Thor, God of Thunder</div>
         </div>
         <div class="group-4">
-            <h5 class="left">Call to Action! It's Time!</h5>
-            <div class="text left">Sign up for our product by clicking that button right over there!</div>
-            <button>Sign Up</button>
+            <div class="final">
+            <h5>Call to Action! It's Time!</h5>
+            </div>
+            <button class="button-2">Sign Up</button>
         </div>
     </div>
     <div class="footer">
